--- a/lib/liveview_food_order_web/live/first/first_live.html.heex
+++ b/lib/liveview_food_order_web/live/first/first_live.html.heex
@@ -1,6 +1,16 @@
 <%= @total %>
+
+<form phx-submit="save">
+  <input type="text" name="component">
+  <button>Inc component</button>
+</form>
+
 <ul>
-  <%= for component_value <- @components_value do %>
-    <li><%= component_value %></li>
-  <%= end %>
+  <%= for value <- @components_value do %>
+    <.live_component 
+      module={IncComponent} 
+      id={"inc-" <> Integer.to_string(value)} 
+      value={value} 
+    />
+  <%= end %>  
 </ul>
