--- a/lib/liveview_food_order_web/templates/page/index.html.heex
+++ b/lib/liveview_food_order_web/templates/page/index.html.heex
@@ -1,3 +1,7 @@
+<h1 class="text-blue-500">Hello Tailwind</h1>
+
+<!--
+
 <section class="phx-hero">
   <h1><%= gettext "Welcome to %{name}!", name: "Phoenix" %></h1>
   <p>Peace of mind from prototype to production</p>
@@ -39,3 +43,5 @@
     </ul>
   </article>
 </section>
+
+-->
