--- a/lib/liveview_food_order_web/templates/layout/root.html.heex
+++ b/lib/liveview_food_order_web/templates/layout/root.html.heex
@@ -12,6 +12,8 @@
   <body>
     <header>
     </header>
-    <%= @inner_content %>
+    <div class="p-4">
+      <%= @inner_content %>
+    </div>
   </body>
 </html>
