--- a/lib/liveview_food_order_web/templates/layout/root.html.heex
+++ b/lib/liveview_food_order_web/templates/layout/root.html.heex
@@ -14,6 +14,7 @@
     <header>
     </header>
     <div class="p-4">
+      <%= render LiveviewFoodOrderWeb.LayoutView, "header.html", assigns %>
       <%= @inner_content %>
     </div>
   </body>
