--- a/lib/liveview_food_order_web/live/main/items/items.html.heex
+++ b/lib/liveview_food_order_web/live/main/items/items.html.heex
@@ -1,5 +1,5 @@
   <section class="menu container mx-auto py-8" id={@id}>
-    <h1 class="text-xl font-bold mb-8">All foods</h1>
+    <h1 class="text-xl font-bold mb-8" data-role="items-info" data-id="all-food">All foods</h1>
     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 col-gap-12 row-gap-16">
 
       <%= for i <- 0..10 do %>
